# tobicore

./: configure.ac
debian/: changelog  libtobicore-mex.install
doc/examples/mextobiplatform/: ic.m  id.m  tpic_client.m  tpic_server.m
doc/examples/tobiid/: Makefile.am
doc/examples/tobiplatform/: Makefile.am
mex/: Makefile.am
mex/mextobicore/: tobicore.mw
mex/mextobiic/: tobiic.mw
mex/mextobiid/: tobiid.mw
mex/mextobiplatform/: Makefile.am  make.m  tobiplatform.mw
mex/tobicoremat/: tobicoremat_init.m
misc/tobicore/: tobicore.sln
misc/tobicore/tobicore/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  tobicore.cpp  tobicore.h  tobicore.vcxproj  tobicore.vcxproj.filters
misc/tobicore/tobiic/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  tobiic.cpp  tobiic.h  tobiic.vcxproj  tobiic.vcxproj.filters
misc/tobicore/tobiid/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  tobiid.cpp  tobiid.h  tobiid.vcxproj  tobiid.vcxproj.filters
src/tobicore/: TCException.hpp  TCTime.cpp  TCTime.hpp  TCTimestamp.cpp  TCTools.cpp  rapidxml_print.hpp  tobicore.pc.in
src/tobiic/: tobiic.pc.in
src/tobiid/: tobiid.pc.in
